--- a/Arc/index.html
+++ b/Arc/index.html
@@ -189,7 +189,7 @@
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img @click="change_draw_law('draw_law1')" src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png" style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
-                    <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
+                    <p >ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
 
                 <div class="col-4 align-self-center text-center" v-if="!status_draft_law[2]">
@@ -197,7 +197,7 @@
                         <!-- <source src="Architecture/solve/flower/Pinkflowers/Pinkflowersps.mp4" type="video/mp4"> -->
                     </video> <br>
 
-                    <p class="Draft">
+                    <p class="Draft" style="margin-left: 2.5vw;">
                         ร่าง{{info.Draftlaw[2].DLName1}}
                     </p>
 
