--- a/Arc/index.html
+++ b/Arc/index.html
@@ -251,10 +251,10 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="lay_text2 topic_text">
+                    <p class="lay_text2 topic_text" style="width: 30vw;">
                         {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
-                    <p class="lay_text2 text">
+                    <p class="lay_text2 text" style="width: 37vw; margin-top: 1.562225475841874vw;">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
                 </div>
