--- a/Arc/index.html
+++ b/Arc/index.html
@@ -245,12 +245,12 @@
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
-                <div class="col-5">
+                <div class="col-5" >
                     <video src="Architecture/solve/draftlaw/Married with children 1.mp4" autoplay muted style="margin: 0;" class="vdo2 home_bg_vdo2">
                         <!-- <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7">
+                <div class="col-7" style="position:fixed;">
                     <p class="lay_text2 topic_text" style="width: 30vw; position:fixed;">
                         {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
