--- a/Arc/index.html
+++ b/Arc/index.html
@@ -250,11 +250,11 @@
                         <!-- <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7" style="position:fixed;">
-                    <p class="lay_text2 topic_text" style="width: 30vw; position:fixed;">
+                <div class="col-7" >
+                    <p class="lay_text2 topic_text" style="width: 30vw; position: sticky;">
                         {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
-                    <p class="lay_text2 text" style="width: 37vw; margin-top: 1.562225475841874vw; position:fixed;">
+                    <p class="lay_text2 text" style="width: 37vw; margin-top: 1.562225475841874vw; position: sticky;">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
                 </div>
