--- a/Arc/index.html
+++ b/Arc/index.html
@@ -397,7 +397,9 @@
                         document.title = "Time To Bloom";
                     }
                     this.hidden_or_show_scroll_bar(false);
-                } else if (page != "Time_To_Bloom") {}
+                } else{
+                    this.hidden_or_show_scroll_bar(false);
+                }
             },
             change_law: function(law) {
                 this.what_law = law;
