--- a/Arc/index.html
+++ b/Arc/index.html
@@ -239,7 +239,7 @@
                     <p class="lay_text1 topic_text" id="draft_topic_text">
                         {{info.Draftlaw[0].DLName1}}<br>{{info.Draftlaw[0].DLName2}}
                     </p>
-                    <p class="lay_text1 text" id="draft_text">
+                    <p class="text" id="draft_text">
                         {{info.Draftlaw[0].DLMean1}}
                     </p>
                 </div>
@@ -254,7 +254,7 @@
                     <p class="lay_text2 topic_text" style="width: 30vw; position: sticky;">
                         {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
                     </p>
-                    <p class="lay_text2 text" style="width: 37vw; margin-top: 1.562225475841874vw; position: sticky;">
+                    <p class="text" style="width: 37vw; margin-top: 1.562225475841874vw; position: sticky;">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
                 </div>
@@ -270,7 +270,7 @@
                     <p class="lay_text3 topic_text">
                         {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
                     </p>
-                    <p class="lay_text3 text">
+                    <p class="lay_text3_1 text">
                         {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
                     </p>
                 </div>
@@ -285,7 +285,7 @@
                     <p class="lay_text4 topic_text">
                         {{info.Draftlaw[3].DLName1}}<br>{{info.Draftlaw[3].DLName2}}
                     </p>
-                    <p class="lay_text4 text">
+                    <p class="text">
                         {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
                     </p>
                 </div>
@@ -300,7 +300,7 @@
                     <p class="lay_text5 topic_text">
                         {{info.Draftlaw[4].DLName1}}<br>{{info.Draftlaw[4].DLName2}}
                     </p>
-                    <p class="lay_text5 text">
+                    <p class="text">
                         {{info.Draftlaw[4].DLMean1}}<br><br> {{info.Draftlaw[4].DLMean2}}
                     </p>
                 </div>
