--- a/Arc/index.html
+++ b/Arc/index.html
@@ -75,12 +75,12 @@
         <!-- หน้า Home -->
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
-                <video data-aos-anchor-placement="top-center" data-aos="fade-right" src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0;" class="col-6 home_bg_vdo"></video>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
-                    <p class="topic_text home_topic_text" style="color: #5382bf;">
+                <video data-aos-anchor-placement="top-center" data-aos="fade-right" src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0; left: -4vw;" class="col-6 home_bg_vdo"></video>
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-right: -5.15625vw;">
+                    <p class="topic_text home_topic_text" style="color: #5382bf; font-size: 2.417999vw; width: 40vw;">
                         {{info.Home[0].LawName}}
                     </p>
-                    <p class="text">
+                    <p class="text" style="width: 31.5vw;">
                         {{info.Home[0].Mean}}
                     </p>
                 </div>
@@ -94,7 +94,7 @@
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
-                    <p class="topic_text home_topic_text2" style="color: #5382bf;">
+                    <p class="topic_text home_topic_text2" style="color: #5382bf; font-size: 2.418vw;">
                         {{info.Home[1].LawName}}
                     </p>
                     <p class="text">
