--- a/Arc/index.html
+++ b/Arc/index.html
@@ -138,10 +138,10 @@
             </video>
         </div>
         <div class="col-5">
-            <p class="topic_text" id="law_topic1">
+            <p class="topic_text" id="law_topic1" style="font-size: 2.418vw; width: 40vw;">
                 {{info.Law[0].LawN}}
             </p>
-            <p class="text" id="law_text1">
+            <p class="text" id="law_text1" style="width: 35.18vw; margin-left: -5vw;">
                 {{info.Law[0].LawMean1}}<br><br> {{info.Law[0].LawMean2}}
             </p>
         </div>
