--- a/Arc/index.html
+++ b/Arc/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="col-7">
                     <!--แก้ layout-->
-                    <p class="lay_text3 topic_text">
+                    <p class="lay_text3 topic_text" style="font-size: 2.184vw;">
                         {{info.Draftlaw[2].DLName1}}</p>
                     <p class="lay_text3 topic_text" style="font-size: 1.6vw; margin-top:0; margin-left:0;">
                         {{info.Draftlaw[2].DLName2}}</p>
