--- a/Arc/index.html
+++ b/Arc/index.html
@@ -235,11 +235,13 @@
                         <!-- <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-5">
-                    <p class="lay_text1 topic_text" id="draft_topic_text">
-                        {{info.Draftlaw[0].DLName1}}<br>{{info.Draftlaw[0].DLName2}}
+                <div class="col-5" style="left: -12vw; top: 5vw;">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="font-size: 2.418vw; margin-bottom: 0;">
+                        {{info.Draftlaw[0].DLName1}}
                     </p>
-                    <p class="text" id="draft_text">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="width: 30vw; ">
+                        {{info.Draftlaw[0].DLName2}}</p>
+                    <p class="text" id="draft_text" style="text-indent: 40px;">
                         {{info.Draftlaw[0].DLMean1}}
                     </p>
                 </div>
