--- a/Arc/index.html
+++ b/Arc/index.html
@@ -317,7 +317,7 @@
                         <!-- <source src="Architecture/solve/draftlaw/Safe city laws for women.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7">
+                <div class="col-7" >
                     <!--แก้ layout-->
                     <p class="lay_text3 topic_text">
                         {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
@@ -334,11 +334,12 @@
                         <!-- <source src="Architecture/solve/draftlaw/Dress law in various professions.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7">
-                    <p class="lay_text4 topic_text">
-                        {{info.Draftlaw[3].DLName1}}<br>{{info.Draftlaw[3].DLName2}}
+                <div class="col-7" style="left: -2vw;">
+                    <p class="lay_text4 topic_text" style="width: 39vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
+                        {{info.Draftlaw[3].DLName1}}
                     </p>
-                    <p class="text">
+                    <p class="lay_text4 topic_text" style="width: 38vw;text-indent: 40px; margin-top:0; margin-left: -2vw;">{{info.Draftlaw[3].DLName2}}</p>
+                    <p class="text" style="width: 38vw;text-indent: 40px;">
                         {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
                     </p>
                 </div>
@@ -351,7 +352,7 @@
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="lay_text5 topic_text">
+                    <p class="lay_text5 topic_text" >
                         {{info.Draftlaw[4].DLName1}}<br>{{info.Draftlaw[4].DLName2}}
                     </p>
                     <p class="text">
