--- a/Arc/index.html
+++ b/Arc/index.html
@@ -78,15 +78,12 @@
         <!-- หน้า Home -->
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
-                <video data-aos-anchor-placement="top-center" data-aos="fade-right"
-                    src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0;"
-                    class="col-6 home_bg_vdo"></video>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
-                    style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
-                    <p class="topic_text home_topic_text" style="color: #5382bf;">
+                <video data-aos-anchor-placement="top-center" data-aos="fade-right" src="Architecture/solve/homepage/Waterdrop1.mp4" autoplay muted style="margin: 0; left: -4vw;" class="col-6 home_bg_vdo"></video>
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-right: -5.15625vw;">
+                    <p class="topic_text home_topic_text" style="color: #5382bf; font-size: 2.417999vw; width: 40vw;">
                         {{info.Home[0].LawName}}
                     </p>
-                    <p class="text">
+                    <p class="text" style="width: 31.5vw;">
                         {{info.Home[0].Mean}}
                     </p>
                 </div>
@@ -100,7 +97,7 @@
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
-                    <p class="topic_text home_topic_text2" style="color: #5382bf;">
+                    <p class="topic_text home_topic_text2" style="color: #5382bf; font-size: 2.418vw;">
                         {{info.Home[1].LawName}}
                     </p>
                     <p class="text">
@@ -125,9 +122,7 @@
                     </video> <br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')"
-                        src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png"
-                        style="width: 8.1828vw; height: 10.4361vw;  margin-bottom: 1vw;"><br>
+                <div class="col align-self-center text-center" v-if="status_law[0]"><img @click="change_law('law0')" src="Architecture/solve/flower/Anotherredflower/Anotherredflower.png" style="width: 8.1828vw; height: 10.4361vw;  margin-bottom: 3.4vw;"><br>
                     <p>กฎหมายการเลือกตั้ง</p>
                 </div>
                 <div class="col align-self-center text-center" v-if="!status_law[1]">
@@ -138,9 +133,7 @@
                     </video> <br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
-                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')"
-                        src="Architecture/solve/flower/Blackflower2/Blackflower2.png"
-                        style="width: 160px; height: 160px; margin-bottom: 2vw; margin-top: .5vw;"><br>
+                <div class="col align-self-center text-center" v-if="status_law[1]"><img @click="change_law('law1')" src="Architecture/solve/flower/Blackflower2/Blackflower2.png" style="width: 160px; height: 160px; margin-bottom: 5vw; margin-top: .5vw;"><br>
                     <p>กฎหมายลาคลอด</p>
                 </div>
                 <div class="col"></div>
@@ -154,10 +147,10 @@
                     </video>
                 </div>
                 <div class="col-5">
-                    <p class="topic_text" id="law_topic1">
+                    <p class="topic_text" id="law_topic1" style="font-size: 2.418vw; width: 40vw;">
                         {{info.Law[0].LawN}}
                     </p>
-                    <p class="text" id="law_text1">
+                    <p class="text" id="law_text1" style="width: 35.18vw; margin-left: -5vw;">
                         {{info.Law[0].LawMean1}}<br><br> {{info.Law[0].LawMean2}}
                     </p>
                 </div>
@@ -169,10 +162,12 @@
                         <!-- <source src="Architecture/solve/law/Maternity leave1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7">
-                    <p class="topic_text" id="law_topic2">
+                <div class="col-7" style="left: -4vw;">
+                    <p class="topic_text" id="law_topic2" style="font-size: 2.418vw; width: 40vw;">
                         {{info.Law[1].LawN}}<br> {{info.Law[1].LawN1}}
                     </p>
+
+
                     <p class="text" id="law_text2">
                         {{info.Law[1].LawMean1}}{{info.Law[1].LawMean2}}
                     </p>
@@ -217,7 +212,7 @@
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[1]"><img
                         @click="change_draw_law('draw_law1')"
                         src="Architecture/solve/flower/Purpleflowers/Purpleflowers.png"
-                        style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
+                        style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 2vw;"><br>
                     <p>ร่าง{{info.Draftlaw[1].DLName1}}</p>
                 </div>
 
@@ -256,7 +251,7 @@
                 <div class="col-4 align-self-center text-center" v-if="status_draft_law[3]"><img
                         @click="change_draw_law('draw_law3')"
                         src="Architecture/solve/flower/Blueflowers/Blueflowers.png"
-                        style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 1vw;"><br>
+                        style="width: 8.416666666666666vw; height: 8.416666666666666vw; margin-bottom: 2vw;"><br>
                     <p>ร่าง{{info.Draftlaw[3].DLName1}}</p>
                 </div>
 
@@ -282,16 +277,17 @@
                         <!-- <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-5">
-                    <p class="lay_text1 topic_text" id="draft_topic_text">
+                <div class="col-5" style="left: -12vw; top: 5vw;">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="font-size: 2.418vw; margin-bottom: 0;">
                         {{info.Draftlaw[0].DLName1}}
                     </p>
-                    <p class="topic2">
-                        {{info.Draftlaw[0].DLName2}}
                     </p>
-                    <p class="text1 text" id="draft_text">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="width: 30vw; ">
+                        {{info.Draftlaw[0].DLName2}}</p>
+                    <p class="text" id="draft_text" style="text-indent: 40px;">
                         {{info.Draftlaw[0].DLMean1}}
                     </p>
+
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
@@ -319,7 +315,7 @@
                 </div>
                 <div class="col-7" >
                     <!--แก้ layout-->
-                    <p class="lay_text3 topic_text">
+                    <p class="lay_text3 topic_text" style="font-size: 2.184vw;">
                         {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
                     </p>
                     <p class="lay_text3_1 text">
