--- a/Arc/index.html
+++ b/Arc/index.html
@@ -10,11 +10,15 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -41,7 +45,7 @@
             <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png"
                 @click="change_page('Time_To_Bloom')">
 
-            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page">
+            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page" style="font-weight: bold;">
                 <li class="nav-item">
                     <a class="nav-link button" @click="change_page('Home')">Home</a>
                 </li>
@@ -62,7 +66,7 @@
         <div v-if="what_page == 'Time_To_Bloom'" class="container Time_To_Bloom_container">
             <div class="row Time_To_Bloom_row">
                 <div class="cal-6">
-                    <p class="time_to_bloom_text">Discover all<br>about law<br>for women<br>in Thailand</p>
+                    <p class="time_to_bloom_text" style="font-weight: bold;">Discover all<br>about law<br>for women<br>in Thailand</p>
                     <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
                         @click="change_page('Home')">
                 </div>
@@ -146,13 +150,15 @@
                         <!-- <source src="Architecture/solve/law/Election.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-5">
+                <div class="col-5" style="left: -7vw;">
                     <p class="topic_text" id="law_topic1" style="font-size: 2.418vw; width: 40vw;">
                         {{info.Law[0].LawN}}
                     </p>
-                    <p class="text" id="law_text1" style="width: 35.18vw; margin-left: -5vw;">
-                        {{info.Law[0].LawMean1}}<br><br> {{info.Law[0].LawMean2}}
+                    <p class="text" id="law_text1" style="width: 39vw; margin-left: -5vw; text-indent: 40px; ">
+                        {{info.Law[0].LawMean1}}
                     </p>
+                    <p class="text" id="law_text1" style="width: 37vw; margin-left: -5vw; text-indent: 40px;  top: 23vw; ">
+                        {{info.Law[0].LawMean2}}</p>
                 </div>
             </div>
             <div v-if="what_law == 'law1'" class="row">
@@ -164,13 +170,17 @@
                 </div>
                 <div class="col-7" style="left: -4vw;">
                     <p class="topic_text" id="law_topic2" style="font-size: 2.418vw; width: 40vw;">
-                        {{info.Law[1].LawN}}<br> {{info.Law[1].LawN1}}
+                        {{info.Law[1].LawN}}
                     </p>
+                    <p class="topic_text" id="law_topic2" style="font-weight:lighter; font-size: 1.8vw; top: 10vw;">
+                        {{info.Law[1].LawN1}}</p>
 
 
-                    <p class="text" id="law_text2">
-                        {{info.Law[1].LawMean1}}{{info.Law[1].LawMean2}}
+                    <p class="text" id="law_text2" style="text-indent: 40px; top: 10vw;">
+                        {{info.Law[1].LawMean1}}
                     </p>
+                    <p class="text" id="law_text2"style="text-indent: 40px; width: 35vw;">
+                        {{info.Law[1].LawMean2}}</p>
                 </div>
             </div>
         </div>
@@ -277,30 +287,32 @@
                         <!-- <source src="Architecture/solve/draftlaw/Freeabortionlaw.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-5" style="left: -12vw; top: 5vw;">
-                    <p class="lay_text1 topic_text" id="draft_topic_text" style="font-size: 2.418vw; margin-bottom: 0;">
+                <div class="col-5" style="left: -6vw; top: 2vw;">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="font-size: 2.418vw; top: 13vw;">
                         {{info.Draftlaw[0].DLName1}}
                     </p>
                     </p>
-                    <p class="lay_text1 topic_text" id="draft_topic_text" style="width: 30vw; ">
+                    <p class="lay_text1 topic_text" id="draft_topic_text" style="width: 30vw; font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
                         {{info.Draftlaw[0].DLName2}}</p>
-                    <p class="text" id="draft_text" style="text-indent: 40px;">
+                    <p class="text" id="draft_text" style="text-indent: 40px;width: 33vw;  top: -10vw;">
                         {{info.Draftlaw[0].DLMean1}}
                     </p>
 
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
-                <div class="col-5">
+                <div class="col-5" >
                     <video src="Architecture/solve/draftlaw/Married with children 1.mp4" autoplay muted
                         style="margin: 0;" class="vdo2 home_bg_vdo2">
                         <!-- <source src="Architecture/solve/draftlaw/Married with children 1.mp4" type="video/mp4"> -->
                     </video>
                 </div>
                 <div class="col-7">
-                    <p class="lay_text2 topic_text" style="width: 30vw; position: sticky;">
-                        {{info.Draftlaw[1].DLName1}}<br>{{info.Draftlaw[1].DLName2}}
+                    <p class="lay_text2 topic_text" style="width: 30vw; position: sticky; font-size: 2.418vw;">
+                        {{info.Draftlaw[1].DLName1}}
                     </p>
+                    <p class="lay_text2 topic_text" style="width: 27vw; position: sticky;font-weight:lighter; margin-top: -1vw; font-size: 1.8vw;">
+                        {{info.Draftlaw[1].DLName2}}</p>
                     <p class="text" style="width: 37vw; margin-top: 1.562225475841874vw; position: sticky;">
                         {{info.Draftlaw[1].DLMean1}}
                     </p>
@@ -315,12 +327,15 @@
                 </div>
                 <div class="col-7" >
                     <!--แก้ layout-->
-                    <p class="lay_text3 topic_text" style="font-size: 2.184vw;">
-                        {{info.Draftlaw[2].DLName1}}<br> {{info.Draftlaw[2].DLName2}}
+                    <p class="lay_text3 topic_text" style="position: sticky; font-size: 2.4vw;width: 40vw;">
+                        {{info.Draftlaw[2].DLName1}}
                     </p>
-                    <p class="lay_text3_1 text">
-                        {{info.Draftlaw[2].DLMean1}}<br><br> {{info.Draftlaw[2].DLMean2}}
+                    <p class="lay_text3 topic_text"style="font-weight: lighter; margin-top: -1vw; font-size: 1.6vw; width: 50vw;">
+                        {{info.Draftlaw[2].DLName2}}</p>
+                    <p class="lay_text3_1 text" style="text-indent: 40px;">
+                        {{info.Draftlaw[2].DLMean1}}<br>
                     </p>
+                    <p class="lay_text3_1 text" style="text-indent: 40px;">{{info.Draftlaw[2].DLMean2}}</p>
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law3'" class="row">
@@ -330,14 +345,17 @@
                         <!-- <source src="Architecture/solve/draftlaw/Dress law in various professions.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7" style="left: -2vw;">
+                <div class="col-7" style="left: -2vw; top: 2vw;">
                     <p class="lay_text4 topic_text" style="width: 39vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
                         {{info.Draftlaw[3].DLName1}}
                     </p>
-                    <p class="lay_text4 topic_text" style="width: 38vw;text-indent: 40px; margin-top:0; margin-left: -2vw;">{{info.Draftlaw[3].DLName2}}</p>
-                    <p class="text" style="width: 38vw;text-indent: 40px;">
-                        {{info.Draftlaw[3].DLMean1}}<br><br> {{info.Draftlaw[3].DLMean2}}
+                    <p class="lay_text4 topic_text" style="width: 37vw;text-indent: 40px; margin-top:0; margin-left: -2vw; font-weight: lighter; margin-top: -1vw; font-size: 1.6vw;">
+                        {{info.Draftlaw[3].DLName2}}</p>
+                    <p class="text" style="width: 37vw;text-indent: 40px; ">
+                        {{info.Draftlaw[3].DLMean1}}<br>
                     </p>
+                    <p class="text" style="width: 37vw;text-indent: 40px;">{{info.Draftlaw[3].DLMean2}}</p>
+
                 </div>
             </div>
             <div v-if="what_draft_law == 'draw_law4'" class="row">
@@ -347,13 +365,18 @@
                         <!-- <source src="Architecture/solve/draftlaw/prostitute.mp4" type="video/mp4"> -->
                     </video>
                 </div>
-                <div class="col-7">
-                    <p class="lay_text5 topic_text" >
-                        {{info.Draftlaw[4].DLName1}}<br>{{info.Draftlaw[4].DLName2}}
+                <div class="col-7" style="left: -2vw;">
+                    <p class="lay_text5 topic_text" style="margin-bottom: 0;" >
+                        {{info.Draftlaw[4].DLName1}}
                     </p>
-                    <p class="text">
-                        {{info.Draftlaw[4].DLMean1}}<br><br> {{info.Draftlaw[4].DLMean2}}
+                    <p class="lay_text5 topic_text" style="font-weight: lighter; font-size: 1.8vw;"  >
+                        {{info.Draftlaw[4].DLName2}}</p>
+                    <p class="text"style="width: 38vw;text-indent: 40px; ">
+                        {{info.Draftlaw[4].DLMean1}}
                     </p>
+                    <p class="text"style="width: 38vw;text-indent: 40px; ">
+                        {{info.Draftlaw[4].DLMean2}}
+                        </p>
                 </div>
             </div>
         </div>
@@ -362,7 +385,7 @@
         <!-- หน้า Contact -->
         <div v-if="what_page == 'Contact'" class="container contact_container">
             <div class="row">
-                <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact">
+                <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact" style="right: 3vw;">
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
@@ -399,7 +422,7 @@
                                 target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
-                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test">
+                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test" style="left: -3.8vw;">
                     <iframe v-if="contact_mean == 0" class="test"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
