--- a/Arc/index.html
+++ b/Arc/index.html
@@ -101,10 +101,10 @@
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
-                    <p class="topic_text home_topic_text2" style="color: #5382bf; font-size: 2.418vw;">
+                    <p class="topic_text home_topic_text2" style="color: #5382bf; font-size: 2.418vw;     margin-left: -1.3vw;">
                         {{info.Home[1].LawName}}
                     </p>
-                    <p class="text">
+                    <p class="text" style="right: 20vw; width: 35vw;position: fixed;left: 14vw;">
                         {{info.Home[1].Mean}}
                     </p>
                 </div>
@@ -346,7 +346,7 @@
                     </video>
                 </div>
                 <div class="col-7" style="left: -2vw; top: 2vw;">
-                    <p class="lay_text4 topic_text" style="width: 39vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
+                    <p class="lay_text4 topic_text" style="width: 50vw;text-indent: 40px; margin-top:0;  margin-left: -2vw; font-size: 2.418vw;">
                         {{info.Draftlaw[3].DLName1}}
                     </p>
                     <p class="lay_text4 topic_text" style="width: 37vw;text-indent: 40px; margin-top:0; margin-left: -2vw; font-weight: lighter; margin-top: -1vw; font-size: 1.6vw;">
